# libmcp2221

./: meson.build  meson_options.txt
libmcp2221/: libmcp2221.c  libmcp2221.h
utils/: rcwtool.c
